# bookshell

./: .env  .gitignore  README.md  diagnostic_list.py  pyproject.toml
src/bookshell/: main.py
src/bookshell/core/: database_manager.py  drive.py  drive_logic.py  library.py  models.py  reader.py  reader_manager.py
src/bookshell/readers/: base.py  foliate.py
src/bookshell/services/: drive_service.py  local_service.py  sync_service.py
src/bookshell/utils/: system.py
tests/: diagnostic_list.py  test_categories.py
