[project]
name = "bookshell"
version = "0.1.0"
description = "A CLI tool to manage books from Google Drive"
authors = [
    { name = "Gabriel", email = "gabrielngama@gmail.com" }
]
dependencies = [
    "typer[all]",
    "google-api-python-client",
    "google-auth-oauthlib",
    "python-dotenv",
]

[project.scripts]
bookshell = "bookshell.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
