[project]
name = "bookshell"
version = "0.1.0"
description = "A CLI tool to manage books from Google Drive"
authors = [
    { name = "Gabriel", email = "gabrielngama@gmail.com" }
]
dependencies = [
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "google-api-python-client>=2.126.0",
    "google-auth-oauthlib>=1.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "InquirerPy>=0.3.4",
]

[project.scripts]
bookshell = "bookshell.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
